Translate to Java