@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'idea'
+    id 'scala'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '1.2.4'
 }
@@ -30,10 +31,20 @@ task fatJar(type: Jar) {
 
 dependencies {
     compile 'org.scala-lang:scala-library:2.12.2'
-    compile 'net.dv8tion:JDA:3.0.0_189'
+    compile 'net.dv8tion:JDA:3.1.1_210'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.sedmelluq:lavaplayer:1.2.36'
+    compile 'com.mashape.unirest:unirest-java:1.4.9'
+    compile 'com.google.guava:guava:22.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+tasks.withType(ScalaCompile) {
+    configure(scalaCompileOptions.forkOptions) {
+        memoryMaximumSize = '1G'
+        jvmArgs = ['-XX:MaxPermSize=512M']
+    }
+}
+
 compileJava.options.encoding = 'UTF-8'
+compileScala.options.encoding = 'UTF-8'
